2017年4月12日
1、测试了controller代码 ，需要重新部署到134服务器
2、测试loader代码
3、继续测试aggregator代码